Fix a layout issue in the Albums view on Nextcloud 18 and later
Nextcloud 18 has slightly changed the default font size. The line
height of the list items, on the other hand, were relative to this font
size. This caused track lists of albums with 6+ tracks to become
slightly taller than the album cover art, and hence, those albums took
more vertical space than the albums with less than 6 tracks. This broke
the natural flow of the album elements.

Fixed by manually setting the line height for the track list items
using pixel unit instead of the font-size-dependent em unit.

refs #773

--- a/css/style-tracklist.css
+++ b/css/style-tracklist.css
@@ -12,6 +12,10 @@
  * Common rules for the track-list directive
  */
 
+.track-list li {
+	line-height: 20px;
+}
+
 .track-list li,
 .track-list li * {
 	cursor: pointer;
